# c-log

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  project.nix  project.toml
.github/workflows/: test-and-release.yml
examples/: demo.c
src/: c-log-impl.c  c-log.h
tests/: test_c-log.c
